@@ -360,10 +360,10 @@ public abstract class ConfigurationHandler {
     public final boolean getBoolean(ConfigurationKey key,
 				    boolean defaultValue) {
 	loadIfNecessary();
-	Boolean dflt = new Boolean(defaultValue);
+	Boolean dflt = Boolean.valueOf(defaultValue);
 	Boolean b =
 	    key != null
-	    ? new Boolean(getValue(key.getKey(), dflt.toString()))
+	    ? Boolean.valueOf(getValue(key.getKey(), dflt.toString()))
 	    : dflt;
 	return b.booleanValue();
     }
@@ -424,7 +424,7 @@ public abstract class ConfigurationHandler {
      * @param value the value to set the key to.
      */
     public final void setBoolean(ConfigurationKey key, boolean value) {
-	Boolean bool = new Boolean(value);
+	Boolean bool = Boolean.valueOf(value);
 	workerSetValue(key, bool.toString());
     }
 
